--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -1,3 +1,71 @@
-{% for group in groups %}
-  {{group.link}}
-{% endfor %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+
+    <div class="col-lg-6">
+      <div class="box-element" id="form-wrapper">
+      {% for item in groups %}
+          {% if item.activation == 'False' %}
+                  <ol class="list-group list-group-numbered">
+                      <li class="list-group-item d-flex justify-content-between align-items-start">
+                          <div class="fw-bold">جاهز</div>
+                              <span class="badge bg-primary rounded-pill"> العنوان {{item.name}}</span>
+                              <span class="badge bg-primary rounded-pill"> الرابط {{item.link}}</span>
+                      </li>
+                      <div class="fw-bold">
+                          <button data-group="{{ item.id }}" data-action="SE" class="btn btn-outline-secondary add-to-cart update-order">نشر</button>
+                          <button data-group="{{ item.id }}" data-action="DE" class="btn btn-outline-secondary add-to-cart update-order">حذف</button>
+                      </div>
+                  </ol>
+                  <br>
+          {% endif %}
+      {% endfor %}            
+      </div>
+  </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
+
+    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+
+    <script>
+      $(document).ready(function(){
+          $(".update-group").on("click", function(){
+              var groupId = this.dataset.group
+              var action = this.dataset.action;
+              console.log('orderId', groupId)
+              $.ajax({
+                  method:"POST",
+                  url: "{% url 'update_group' %}",
+                  data: {"groupId":groupId, "action":action,  csrfmiddlewaretoken: '{{ csrf_token }}'},
+                  dataType: "json",
+                  success: function(data){
+                      location.reload();
+                  }
+              });
+          });
+      });
+  </script>
+
+
+  </body>
+</html>
