--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -16,7 +16,7 @@
     <div class="col-lg-6">
       <div class="box-element" id="form-wrapper">
       {% for item in groups %}
-          {% if item.activation == 'False' %}
+          {% if item.activation == false %}
                   <ol class="list-group list-group-numbered">
                       <li class="list-group-item d-flex justify-content-between align-items-start">
                           <div class="fw-bold">جاهز</div>
