--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -9,6 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <style>body {
+      display: flex;
+      height: 100vh;
+      background: #666;
+      flex-direction: column;
+      flex-grow: initial;
+  }</style>
   </head>
   <body>
     <h1>Hello, world!</h1>
