--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -15,6 +15,7 @@
       background: #666;
       flex-direction: column;
       flex-grow: initial;
+      align-items: center;
   }</style>
   </head>
   <body>
@@ -31,8 +32,8 @@
                               <span class="badge bg-primary rounded-pill"> الرابط {{item.link}}</span>
                       </li>
                       <div class="fw-bold">
-                          <button data-group="{{ item.id }}" data-action="SE" class="btn btn-outline-secondary add-to-cart update-order">نشر</button>
-                          <button data-group="{{ item.id }}" data-action="DE" class="btn btn-outline-secondary add-to-cart update-order">حذف</button>
+                          <button data-group="{{ item.id }}" data-action="SE" class="btn btn-outline-secondary update-group">نشر</button>
+                          <button data-group="{{ item.id }}" data-action="DE" class="btn btn-outline-secondary update-group">حذف</button>
                       </div>
                   </ol>
                   <br>
