--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -32,8 +32,8 @@
                               <span class="badge bg-primary rounded-pill"> الرابط {{item.link}}</span>
                       </li>
                       <div class="fw-bold">
-                          <button data-group="{{ item.id }}" data-action="SE" class="btn btn-outline-secondary update-group">نشر</button>
-                          <button data-group="{{ item.id }}" data-action="DE" class="btn btn-outline-secondary update-group">حذف</button>
+                          <button data-group="{{ item.id }}" data-action="SE" class="btn btn-outline-primary update-group">نشر</button>
+                          <button data-group="{{ item.id }}" data-action="DE" class="btn btn-outline-danger update-group">حذف</button>
                       </div>
                   </ol>
                   <br>
