--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -12,7 +12,7 @@
     <style>body {
       display: flex;
       height: 100vh;
-      background: #666;
+      background: rgb(180, 178, 178);
       flex-direction: column;
       flex-grow: initial;
       align-items: center;
