--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -27,8 +27,7 @@
           {{item.activation }}
                   <ol class="list-group list-group-numbered">
                       <li class="list-group-item d-flex justify-content-between align-items-start">
-                          <div class="fw-bold">جاهز</div>
-                              <span class="badge bg-primary rounded-pill"> العنوان {{item.name}}</span>
+                          <div class="fw-bold"> العنوان {{item.name}}</div>
                               <span class="badge bg-primary rounded-pill"> الرابط {{item.link}}</span>
                       </li>
                       <div class="fw-bold">
