update in index html

--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -24,14 +24,17 @@
     <div class="col-lg-6">
       <div class="box-element" id="form-wrapper">
       {% for item in groups %}
-          {{item.activation }}
+          {{}}
                   <ol class="list-group list-group-numbered">
                       <li class="list-group-item d-flex justify-content-between align-items-start">
                           <div class="fw-bold"> العنوان {{item.name}}</div>
                               <span class="badge bg-primary rounded-pill"> الرابط {{item.link}}</span>
                       </li>
                       <div class="fw-bold">
+                          
+                          {% if item.activation == False %}
                           <button data-group="{{ item.id }}" data-action="SE" class="btn btn-outline-primary update-group">نشر</button>
+                          {% endif %}
                           <button data-group="{{ item.id }}" data-action="DE" class="btn btn-outline-danger update-group">حذف</button>
                       </div>
                   </ol>
