--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ar" dir="rtl">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -10,8 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
 
     <title>ادارة تطبيق قروباتي </title>
     <meta content="" name="description">
@@ -19,43 +21,50 @@
 
 
     <title>Hello, world!</title>
-    <style>body {
-      display: flex;
-      height: 100vh;
-      background: rgb(180, 178, 178);
-      flex-direction: column;
-      flex-grow: initial;
-      align-items: center;
-  }</style>
-  </head>
-  <body>
+    <style>
+        body {
+            display: flex;
+            height: 100vh;
+            background: rgb(180, 178, 178);
+            flex-direction: column;
+            flex-grow: initial;
+            align-items: center;
+        }
+    </style>
+</head>
+
+<body>
     <h1>ادارة تطبيق قروباتي !!</h1>
 
     <div class="col-lg-6">
-      <div class="box-element" id="form-wrapper">
-      {% for item in groups %}
-                  <ol class="list-group list-group-numbered">
-                      <li class="list-group-item d-flex justify-content-between align-items-start">
-                          <div class="fw-bold"> العنوان {{item.name}}</div>
-                              <span class="badge bg-primary rounded-pill"> الرابط {{item.link}}</span>
-                      </li>
-                      <div class="fw-bold">
-                          
-                          {% if item.activation == False %}
-                          <button data-group="{{ item.id }}" data-action="SE" class="btn btn-outline-primary update-group">نشر</button>
-                          {% endif %}
-                          <button data-group="{{ item.id }}" data-action="DE" class="btn btn-outline-danger update-group">حذف</button>
-                      </div>
-                  </ol>
-                  <br>
-      {% endfor %}            
-      </div>
-  </div>
+        <div class="box-element" id="form-wrapper">
+            {% for item in groups %}
+            <ol class="list-group list-group-numbered">
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                    <div class="fw-bold"> العنوان {{item.name}}</div>
+                    <span class="badge bg-primary rounded-pill"> الرابط {{item.link}}</span>
+                </li>
+                <div class="fw-bold">
+
+                    {% if item.activation == False %}
+                    <button data-group="{{ item.id }}" data-action="SE"
+                        class="btn btn-outline-primary update-group">نشر</button>
+                    {% endif %}
+                    <button data-group="{{ item.id }}" data-action="DE"
+                        class="btn btn-outline-danger update-group">حذف</button>
+                </div>
+            </ol>
+            <br>
+            {% endfor %}
+        </div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
@@ -66,24 +75,25 @@
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 
     <script>
-      $(document).ready(function(){
-          $(".update-group").on("click", function(){
-              var groupId = this.dataset.group
-              var action = this.dataset.action;
-              console.log('groupId', groupId)
-              $.ajax({
-                  method:"POST",
-                  url: "{% url 'update_group' %}",
-                  data: {"groupId":groupId, "action":action,  csrfmiddlewaretoken: '{{ csrf_token }}'},
-                  dataType: "json",
-                  success: function(data){
-                      location.reload();
-                  }
-              });
-          });
-      });
-  </script>
+        $(document).ready(function () {
+            $(".update-group").on("click", function () {
+                var groupId = this.dataset.group
+                var action = this.dataset.action;
+                console.log('groupId', groupId)
+                $.ajax({
+                    method: "POST",
+                    url: "{% url 'update_group' %}",
+                    data: { "groupId": groupId, "action": action, csrfmiddlewaretoken: '{{ csrf_token }}' },
+                    dataType: "json",
+                    success: function (data) {
+                        location.reload();
+                    }
+                });
+            });
+        });
+    </script>
 
 
-  </body>
+</body>
+
 </html>
