--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -41,8 +41,8 @@
             {% for item in groups %}
             <ol class="list-group list-group-numbered">
                 <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="fw-bold"> العنوان {{item.name}}</div>
-                    <span class="badge bg-primary rounded-pill"> الرابط {{item.link}}</span>
+                    <div class="fw-bold"> العنوان ||| {{item.name}}</div>
+                    <span class="badge bg-primary rounded-pill"> الرابط ||| {{item.link}}</span>
                 </li>
                 <div class="fw-bold">
 
