--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -35,7 +35,7 @@
 
 <body>
     <h1>ادارة تطبيق قروباتي !!</h1>
-
+    <a href="url 'Report'"> البلاغات</a>
     <div class="col-lg-6">
         <div class="box-element" id="form-wrapper">
             {% for item in groups %}
@@ -45,7 +45,6 @@
                     <span class="badge bg-primary rounded-pill"> الرابط ||| {{item.link}}</span>
                 </li>
                 <div class="fw-bold">
-
                     {% if item.activation == False %}
                     <button data-group="{{ item.id }}" data-action="SE"
                         class="btn btn-outline-primary update-group">نشر</button>
