--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -35,7 +35,7 @@
 
 <body>
     <h1>ادارة تطبيق قروباتي !!</h1>
-    <a href="url 'Report'"> البلاغات</a>
+    <a href="{% url 'Report' %}"> البلاغات</a>
     <div class="col-lg-6">
         <div class="box-element" id="form-wrapper">
             {% for item in groups %}
