--- a/whatsApp/templates/index.html
+++ b/whatsApp/templates/index.html
@@ -1,98 +1,43 @@
-<!doctype html>
-<html lang="ar" dir="rtl">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.82.0">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+{% extends 'base.html' %}
 
 
-    <title>ادارة تطبيق قروباتي </title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+{% block content %}
 
 
-    <title>Hello, world!</title>
-    <style>
-        body {
-            display: flex;
-            height: 100vh;
-            background: rgb(180, 178, 178);
-            flex-direction: column;
-            flex-grow: initial;
-            align-items: center;
-        }
-    </style>
-</head>
+<h1>ادارة تطبيق قروباتي !!</h1>
+<div class="cart-row">
+    <a class="btn btn-outline-primary " href="{% url 'Report' %}"> البلاغات</a>
+    <a class="btn btn-outline-primary " href="{% url 'Report' %}"> الاقسام</a>
+    <a class="btn btn-outline-primary " href="{% url 'Report' %}"> الفئات</a>
+    <a class="btn btn-outline-primary " href="http://127.0.0.1:8000/admin/"> admin</a>
 
-<body>
-    <h1>ادارة تطبيق قروباتي !!</h1>
-    <a href="{% url 'Report' %}"> البلاغات</a>
+</div>
+    
     <div class="col-lg-6">
         <div class="box-element" id="form-wrapper">
             {% for item in groups %}
-            <ol class="list-group list-group-numbered">
+            <ol class="list-group list-group-numbered{{item.id}}">
                 <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="fw-bold"> العنوان ||| {{item.name}}</div>
-                    <span class="badge bg-primary rounded-pill"> الرابط ||| {{item.link}}</span>
+                    <div class="fw-bold"> {{item.name}}</div>
+                    <span class="badge bg-primary rounded-pill">{{item.link}}</span>
                 </li>
-                <div class="fw-bold">
-                    {% if item.activation == False %}
-                    <button data-group="{{ item.id }}" data-action="SE"
-                        class="btn btn-outline-primary update-group">نشر</button>
-                    {% endif %}
-                    <button data-group="{{ item.id }}" data-action="DE"
+                <li class="list-group-item d-flex justify-content-between align-items-start">
+                    <div class="fw-bold"> 
+                        {% if item.activation == False %}
+                        <button data-group="{{ item.id }}" data-action="SE"
+                            class="btn btn-outline-primary update-group">نشر</button>
+                        {% endif %}
+                        <a class="btn btn-outline-primary " href="#"> التعليقات</a>
+                    </div>
+                    <div class="fw-bold"> 
+                        <button data-group="{{ item.id }}" data-action="DE"
                         class="btn btn-outline-danger update-group">حذف</button>
-                </div>
+                    </div>
+                </li>                           
             </ol>
             <br>
             {% endfor %}
         </div>
     </div>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-
-    <script>
-        $(document).ready(function () {
-            $(".update-group").on("click", function () {
-                var groupId = this.dataset.group
-                var action = this.dataset.action;
-                console.log('groupId', groupId)
-                $.ajax({
-                    method: "POST",
-                    url: "{% url 'update_group' %}",
-                    data: { "groupId": groupId, "action": action, csrfmiddlewaretoken: '{{ csrf_token }}' },
-                    dataType: "json",
-                    success: function (data) {
-                        location.reload();
-                    }
-                });
-            });
-        });
-    </script>
-
-
-</body>
-
-</html>
+    
+{% endblock content %}
